ajout des pages europe, puissances et amérique du nord

--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -15,11 +15,12 @@ git push
         <link rel = "stylesheet" href = "CSS/style.css"> <!-- changer l'arborescence si besoin ici-->
         <link rel="icon" type="image/png" sizes="32x32" href="image/sablier.png" /> <!-- Glisser une image/logo de taille 32x32 qui apparaîtra dans le moteur de recherche -->
         <meta name="description" content="Projet scolaire à propos de la guerre de Sept Ans. Présentation intéractive du conflit en Europe, en Amérique du Nord et dans le sous-continent inden ; site en français, anglais, espagnol et allemand."> <!-- Description apparaissant sur le moteur de recherche -->
-        <script src="JS/script.js"></script>
+        <script src="JS/jquery-3.7.1.min.js"></script>
+        <script language="JavaScript" src="JS/script.js"></script>
     </head>
     <body id="page_home">
 
-        <svg width="105%" height="105%" class ="gradient">
+        <svg width="102%" height="105%" class ="gradient">
             <defs>
                 <linearGradient id="g1" x1="0%" y1="0%" x2="0%" y2="100%" >
                     <stop offset="10%" style="stop-color:rgb(0, 0, 0);stop-opacity:0" />
@@ -34,7 +35,7 @@ git push
         <nav> <!--Rajouter les liens des pages-->
             <ul class="menu">
 
-              <li><a href="accueil_projet_de_langue.html">Accueil</a></li>
+              <li><a href="accueil_projet_1a.html.html">Accueil</a></li>
               <li><a href="fr/a_propos.html">À propos</a></li>
               <li><a href="fr/contact.html">Contact</a></li>
               <li><a href="fr/source.html">Sources</a></li>
@@ -227,7 +228,7 @@ git push
                 </p>
 
                 <p>
-                    A l’origine de la guerre de Sept Ans, qui durera dans les faits neufs ans, nous trouvons
+                    A l’origine de la guerre de Sept Ans, qui durera dans les faits neuf ans, nous trouvons
                     donc des escarmouches mineures en Amérique en Nord. Ces combats – même s’ils ne sont pas 
                     les seuls responsables – auront des effets désastreux sur le fragile équilibre géopolitique 
                     européen, issu de la guerre de Succession d’Autriche. L’histoire du début de la guerre de Sept Ans
