--- a/fr/amerique_nord.html
+++ b/fr/amerique_nord.html
@@ -137,25 +137,25 @@ git push
                 </li>
                 <li class="inde"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
-                        <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
-                        <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
+                        <li><a href="inde.html#compagnies">Les compagnies coloniales européennes</a></li>
+                        <li><a href="inde.html#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
                 <li  class="ailleurs"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span>><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
-                        <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                        <li><a href="ailleurs.html#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
                                 <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                                 <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                             </ul>-->
-                        <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
+                        <li><a href="ailleurs.html#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
                 <li  class="issue"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
-                        <li><a href = "issue.html/#paris">Traité de Paris</a></li>
-                        <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
-                        <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
+                        <li><a href = "issue.html#paris">Traité de Paris</a></li>
+                        <li><a href = "issue.html#hubertsbourg">Traité de Hubertsbourg</a></li>
+                        <li><a href = "issue.html#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
                 <li class="impacts"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
@@ -180,6 +180,91 @@ git push
                 <h3 id="introduction">La Guerre de la Conquête</h3>
 
                 <div class="introduction">
+
+                    <p>
+                        La connaissance du continent américain aux yeux des européens date de presque trois cents ans, et 
+                        pourtant une bonne partie de cette région du globe reste encore largement méconnue pour les géographes 
+                        de l’époque. Beaucoup d’Amérindiens ne sont encore jamais entrés en contact direct avec les explorateurs 
+                        européens. 
+                    </p>
+
+                    <p>
+                        Qui plus est, l’implantation des premières colonies par les Anglais, les Français, mais aussi les Hollandais 
+                        en Amérique du Nord a été beaucoup plus difficile qu’en Amérique Centrale et dans les Antilles, du fait 
+                        des hivers rigoureux du Québec et de la Nouvelle-Angleterre mais aussi de la forte résistance des Amérindiens 
+                        contre ces installations. Plus au sud, les colonies anglaises de Géorgie, de Caroline et de Virginie 
+                        prospèrent ; leur économie repose d’une façon primordiale sur le travail forcé des esclaves d’Afrique et d’Amérique. Les 
+                        atrocités commises en ce sens se retrouvent justifiés par la construction à cette époque du système de pensée 
+                        raciste.
+                    </p>
+
+                    <p>
+                        La présence européenne en Amérique apparaît donc non seulement justifiée par des volontés commerciales mais aussi 
+                        par la croyance sincère d’une supériorité de la civilisation européenne sur les Amérindiens. Ainsi le récit de la 
+                        guerre de Sept Ans en Amérique, aussi appelée guerre de la Conquête par les Anglais, ne peut être entièrement 
+                        assimilé sans prendre en compte ce biais fondamental dans les relations entre Européens et Amérindiens.
+                    </p>
+
+                    
+                    <div class="blog">
+
+                        <div>
+                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        </div>
+
+                        <div class="blog_texte">
+
+                            <h5>Les protagonistes de la guerre en Amérique</h5>
+
+                            <p>
+                                blog acteurs
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                    <hr/>
+
+                    <h4>Contexte américain</h4>
+
+                    <p>
+                        Il est tout à fait vrai d’affirmer que la guerre de Sept Ans naît en Amérique. Cependant, avant que le 
+                        conflit ne se propage en Europe puis en Inde, il a fallu que les informations relatant les premières 
+                        escarmouches traversent l’océan Atlantique puis l’océan Indien. L’immensité des espaces du Québec, de 
+                        la Nouvelle-Angleterre et la très faible densité de population rendent la circulation des informations 
+                        tout aussi difficile au sein même de ces territoires. Ainsi l’Amérique ne suit pas tout à fait la même 
+                        temporalité qu’en Europe, mais avec un temps d’avance – ou de retard suivant les points de vue – de quelques 
+                        semaines voire plusieurs mois.
+                    </p>
+
+                    <div class="blog">
+
+                        <div>
+                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        </div>
+
+                        <div class="blog_texte">
+
+                            <h5>Le déroulement de la guerre de la Conquête</h5>
+
+                            <p>
+                                blog déroulement
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                    <hr/>
+
+                    <p>
+                        La carte ci-dessous montre l’étendue des colonies française et anglaise au nord-est de l’Amérique du Nord. 
+                        La surface terrestre représentée y est à peu près équivalente à toute l’Europe de l’Ouest, et pourtant moins 
+                        d’un million d’habitant vivent sur ces terres.
+                    </p>
+
+                    <img src="../image/america_map_fr.png" class="carte_amerique" width="100%"/>
 
                 </div>
 
