--- a/fr/europe.html
+++ b/fr/europe.html
@@ -174,18 +174,99 @@
 
             <div class="cadre">
 
-                <h3 id="introduction"></h3>
+                <h3 id="introduction">Le contexte européen</h3>
 
                 <div class="introduction">
 
+                    <h4>La dynastie des Habsbourg et le Royaume de France</h4>
+
                     <p>
-                        Contexte sur les conflits antérieurs en Europe (Guerre de Succession d'Autriche) 
-                        puis traité d'Aix-la-Chapelle en 1748 (Marie-Thérèse impératrice d'autriche)
-                        Les frontières de puissances européennes n'ont globalement pas bougé depuis ce traité.
+                        Depuis le XVI° siècle, le Royaume de France et l’empire hérité de Charles Quint s’affrontent pour la domination de l’Europe. 
+                        Ce dernier est membre de la maison des Habsbourg qui gouverne en son temps une bonne partie du continent européen : 
+                        les provinces néerlandaises, le Saint-Empire romain germanique, une bonne part de l’Autriche et de la Hongrie, la 
+                        Bohème et Moravie, le royaume de Sicile et surtout le royaume d’Espagne, avec son immense empire colonial. Le poids 
+                        démographique de la France constitue quant à lui un atout considérable : il s’agit du territoire le plus peuplé sur 
+                        le continent, et de loin, avec près de 20 millions d’habitants.
                     </p>
 
                     <p>
-                        envoyer la carte.
+                        Cette lutte pour l’hégémonie force les autres puissances européennes à se placer du côté de l’un des deux protagonistes. 
+                        Les trois siècles précédents sont ainsi rythmés par les conflits armés entre la France et les Habsbourg : les onze guerres 
+                        d’Italie (1494-1559), la guerre de Trente Ans (1618-1648), ou encore la guerre de Succession d’Espagne (1701-1714). 
+                        Cette rivalité est encore présente lors de la guerre de Succession d’Autriche (1740-1748)
+                    </p>
+
+                    <h4>Le temps de la Réforme</h4>
+
+                    <p>
+                        La deuxième rupture avec l’époque médiévale sur le continent européen est la Réforme protestante amorcée au début du XVI° 
+                        siècle également. Dans un premier temps, les désaccords religieux sont confinés au sein de la noblesse française et impériale, 
+                        mais le mouvement de la Réforme devient rapidement un mouvement de protestation politique envers les pouvoirs catholiques en place.
+                    </p>
+
+                    <p>
+                        Au cours des deux siècles qui suivirent, l’Europe s’entredéchire entre royaumes protestants et catholiques : huit guerres 
+                        civiles se succèdent en France en moins de quarante ans, jusqu’à la mise en application de l’édit de Nantes en 1598 ; 
+                        presque l’ensemble des grandes puissances prennent part à la guerre de Trente Ans, évoquée plus haut, qui renforce 
+                        considérablement l’assise protestante en Europe du Nord.
+                    </p>
+
+                    <p>
+                        Le royaume de Grande-Bretagne n’est pas en reste. Les évènements de la Glorieuse Révolution de 1688 bouleverse le paysage 
+                        politique du pays. Le roi actuel Jacques II est poussé vers l’exil par des évêques anglicans insatisfaits de la politique 
+                        religieuse du roi catholique. Son cousin Louis XIV lui accorde l’asile jusqu’à sa mort. Pendant près de soixante ans, la 
+                        Grande-Bretagne connaît des troubles récurrents entre catholiques et protestants, notamment en Irlande et en Ecosse.
+                    </p>
+
+                    <h4>Guerre de Succession d’Autriche (1740-1748)</h4>
+
+                    <p>
+                        Essentiellement, la guerre de Sept Ans hérite de la situation diplomatique et militaire de la guerre de Succession d’Autriche, 
+                        déclenché par la volonté du père de Marie-Thérèse d’Autriche, Charles VI, de mettre sa fille sur le trône du Saint-Empire romain germanique 
+                        au détriment de ses nièces. Cette affaire de famille se solde par une guerre qui durera huit ans, impliquant de nouveau 
+                        la plupart des royaumes européens. L’un des évènements marquant de ce conflit est l’affirmation de la Prusse de Frédéric II comme 
+                        puissance militaire par l’invasion en 1742 de la Silésie. Par ailleurs, les mêmes protagonistes sont impliqués dans la guerre de 
+                        Sept Ans et cette province très prospère du sud-est de la Pologne sera le théâtre de violents combats.
+                    </p>
+
+                    <h4>Révolution diplomatique</h4>
+
+                    <p>
+                        A la veille de la guerre sur le continent, une série de traité sont signés par les principales puissances européennes 
+                        et mettent en branle l’ensemble de l’édifice diplomatique construit après la guerre de Succession d’Autriche.
+                    </p>
+
+                    <p>
+                        La page relatant les échanges diplomatiques en Europe développe plus en détail cet aspect de la guerre de Sept Ans.
+                    </p>
+
+                    <div class="blog">
+
+                        <div>
+                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        </div>
+
+                        <div class="blog_texte">
+
+                            <h5>Les relations diplomatiques en Europe</h5>
+
+                            <p>
+                                test
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                    <hr/>
+
+                    <p>
+                        La carte ci-dessous présente les frontières des différentes puissances européennes ainsi que leurs alliances 
+                        respectives. Cliquez sur les noms encadrés pour accéder à une fiche explicative des positions de chaque pays. 
+                        Vous pouvez également accéder à l’article plus général sur le déroulement de la campagne militaire en Allemagne 
+                        en cliquant sur le large cadre vert. Enfin certaines batailles maritimes et terrestres sont décrites en cliquant 
+                        sur les cercles bleus et rouge. Les frontières décrites sont celles qui découlent directement du traité 
+                        d’Aix-la-Chapelle, signé à la fin de la guerre de Succession d’Autriche en 1748.
                     </p>
 
                     <div class="cliquable">
@@ -194,7 +275,7 @@
                 
                         <div class="allemagne-zone">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/episodes.html/#allemagne">
+                                <a href="europe/episodes.html#allemagne">
                                   <rect class="hoverable-allemagne" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
@@ -202,53 +283,54 @@
                         
                         <div class="royaume-france">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#france">
+                                <a href="europe/puissances.html#france">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="saint-empire">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#saint-empire">
+                                <a href="europe/puissances.html#saint-empire">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="royaume-espagne">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#espagne">
+                                <a href="europe/puissances.html#espagne">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="royaume-grande-bretagne">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#angleterre">
+                                <a href="europe/puissances.html#angleterre">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="royaume-prusse">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#prusse">
+                                <a href="europe/puissances.html#prusse">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="republique-deux-nations">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#deux-nations">
+                                <a href="europe/puissances.html#deux-nations">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="monarchie-habsbourg">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#habsbourg">
+                                <a href="europe/puissances.html#habsbourg">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
+                        <!--
                         <div class="electorat-hanovre">
                             <svg width="100%" height="100%" class="carre">
                                 <a href="europe/puissances.html/#hanovre">
@@ -256,51 +338,52 @@
                                 </a>
                             </svg>
                         </div>
+                        -->
                         <div class="empire-russe">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#russie">
+                                <a href="europe/puissances.html#russie">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="royaume-suede">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#suede">
+                                <a href="europe/puissances.html#suede">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="royaume-portugal">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/puissances.html/#portugal">
+                                <a href="europe/puissances.html#portugal">
                                   <rect class="hoverable-pays" x="0" y="0" width="100%" height="100%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="minorque">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/episodes.html/#minorque">
+                                <a href="europe/episodes.html#minorque">
                                   <circle class="hoverable" cx="50%" cy="50%" r="35%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="carthagene">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/episodes.html/#carthagene">
+                                <a href="europe/episodes.html#carthagene">
                                   <circle class="hoverable" cx="50%" cy="50%" r="35%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="quiberon-belle-ile">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/episodes.html/#quiberon-belle-ile">
+                                <a href="europe/episodes.html#quiberon-belle-ile">
                                   <circle class="hoverable" cx="50%" cy="50%" r="35%" />
                                 </a>
                             </svg>
                         </div>
                         <div class="almeida">
                             <svg width="100%" height="100%" class="carre">
-                                <a href="europe/episodes.html/#almeida">
+                                <a href="europe/episodes.html#almeida">
                                   <circle class="hoverable-almeida" cx="50%" cy="50%" r="35%" />
                                 </a>
                             </svg>
@@ -309,11 +392,71 @@
                     </div>
 
                     <p>
-                        Situation diplomatique
+                        Les territoires en orange présentent des réalités plus complexes. Le Saint-Empire romain germanique se composent en effet 
+                        d’une multitude de petits états indépendants. Certains se sont rangés du côté de la Prusse quand d’autres sont alignés 
+                        sur la position de l’empereur Charles VII, alliés aux Autrichiens. La plupart restent neutres sur le conflit. La Russie 
+                        s’est très largement engagée dans l’alliance franco-autrichienne même si à la mort de la tsarine Elisabeth en 1962,  
+                        Pierre III de Russie décide de signer immédiatement une paix séparée avec la Prusse.
+                    </p>
+
+                    <h4>L’éclatement du conflit</h4>
+
+                    <div class="blog">
+
+                        <div>
+                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        </div>
+
+                        <div class="blog_texte">
+
+                            <h5>Le déroulement de la guerre en Europe</h5>
+
+                            <p>
+                                blog épisodes
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                    <h4>Le début d’une certaine conscience nationale ?</h4>
+
+                    <p>
+                        Le milieu du XVIII° siècle marque l’essor d’une presse et d’une littérature dites « patriotes ». Certaines pièces en France comme 
+                        le Siège de Calais, paru en 1765 et écrit par Pierre-Laurent de Belloy connaissent des succès critiques et populaires fulgurants. 
+                        Belloy dramatise dans cette pièce les enjeux d’une bataille se déroulant au début de la guerre de Cent Ans, au XIV° siècle, qui 
+                        fut une large victoire pour les Anglais. Il fait valoir une victoire morale en mettant en avant l’héroïsme dont aurait fait preuve 
+                        les habitants de Calais au cours de ces onze mois de siège et au moment de la capitulation. C’est à partir de cette pièce que 
+                        commence la mythification des six bourgeois de Calais, menés par Eustache de Saint-Pierre, qui se sacrifient pour sauver la 
+                        ville et sa population. Une de ses répliques illustre l’intention de de Belloy dans sa pièce :
+                    </p>
+
+                    <p class = "citation">
+                        Amour de la patrie, ô pure et vive flamme, <br/>
+                        Toi, mère des vertus ; toi, l’âme de mon âme, <br/>
+                        Rallume dans mon sein tes transports généreux ; <br/>
+                        Que mes pleurs paternels soient séchés par tes feux. <br/>
+                        C'est mon pays, mon roi, la France qui m'appelle, <br/>
+                        Et non le sang d'un fils qui dut mourir pour elle...
                     </p>
 
                     <p>
-                        Eclatement du conflit
+                        Si la notion d’Etat-nation reste anachronique pour cette époque, ces quelques vers posent le cadre d’un récit nationaliste qui 
+                        aura survécu à la fin du royalisme et sera repris par les régimes politiques successifs en France. 
+                    </p>
+
+                    <p>
+                        En Angleterre, ces relents de patriotisme exaltés sont principalement portés au parlement par la voix de William Pitt, 
+                        issu de la branche patriote du parti Whig. Devenu premier ministre sans toutefois en accepter le titre en 1757, il 
+                        s’était fait connaître auparavant pour ses positions virulentes envers le roi George II. Brillant orateur, il 
+                        prétend porter la « voix de l’Angleterre » contre l’élite notoirement corrompue de la Chambre des Communes, et joue 
+                        sur les ressentiments germanophobes très répandus au sein de la population. Le parti Whig diffuse plus largement ses 
+                        idées par biais de la presse écrite. <em>the Monitor</em> constitue un puissant bras médiatique pour le parti, pouvant rivaliser 
+                        avec le <em>London Gazette</em>, le journal officiel.
+                    </p>
+
+                    <p>
+                        William Pitt jouera par ailleurs un rôle de premier plan dans la guerre de Sept Ans, longuement développé dans ce site.
                     </p>
 
                 </div>
