--- a/fr/europe/puissances.html
+++ b/fr/europe/puissances.html
@@ -239,7 +239,7 @@
                         La déclaration des droits de 1689, le <em>Bill of Rights</em>, développe en détail le fonctionnement des institutions 
                         anglaises et renforce les pouvoirs du Parlement au détriment de la monarchie. Il est important de noter que ces 
                         évènements sont le fruit d’une ingérence des néerlandais, et notamment de Guillaume III d’Orange, qui envahit 
-                        le sud-ouest de l’Angleterre avec près de 10 000 soldats d’élite, poussant la plupart des nobles et évêques à 
+                        le sud-ouest de l’Angleterre avec près de dix mille soldats d’élite, poussant la plupart des nobles et évêques à 
                         stopper leur soutien à Jacques II. 
                     </p>
 
@@ -282,25 +282,24 @@
                     <p>
                         Situé aux confins de l’Europe de l’Est, l’empire russe créé en 1721 reprend l’héritage et l’appareil d’Etat du 
                         tsarat de Russie, dont le siège était à Moscou. En 1703, à l’initiative de Pierre le Grand, le début du 
-                        transfert des administrations et du palais royal à Saint-Pétersbourg. L’emplacement de la nouvelle capitale 
+                        transfert des administrations et du palais royal à Saint-Pétersbourg est acté. L’emplacement de la nouvelle capitale 
                         impériale est fortement symbolique puisqu’elle marque un rapprochement vers l’Europe mais aussi et surtout 
-                        une volonté pour l’empire russe de légitimer sa présence sur rives de la mer Baltique, sur des terres longtemps 
-                        revendiquées et contrôlées par la Suède.
+                        une volonté pour l’empire russe de légitimer sa présence sur les rives de la mer Baltique.
                     </p>
 
                     <p>
                         Au début du XVIII° siècle, la Russie a pris le contrôle de quasiment toute la Sibérie, n’affrontant que peu 
                         de résistance. En 1690, elle signe avec la Chine de la dynastie Qing un traité de paix, sécurisant la 
                         possession de ces immenses territoires. Les résistances les plus fortes auxquelles font face la Russie du 
-                        XVI° siècle au XVIII° viennent principalement du Caucase et des steppes pontiques. Notamment, l’hetmanat 
-                        cosaque, dans les territoires s’étendent dans l’actuelle Ukraine centrale, cherche à maintenir un degré 
+                        XVI° siècle au XVIII° viennent principalement du Caucase et des steppes pontiques. Notamment, l’Hetmanat 
+                        Cosaque, dont les territoires s’étendent dans l’actuelle Ukraine centrale, cherche à maintenir un degré 
                         d’autonomie vis-à-vis de la Pologne, des Ottomans et de la Russie. 
                     </p>
 
                     <p>
                         A rebours de la plupart des pays européens, la Russie maintient et renforce le système de servage des paysans 
                         vis-à-vis des propriétaires terriens. Les révoltes cosaques contre ce système similaire à l’esclavage pratiqué 
-                        par les autres puissances européennes au XVI° et XVII° siècle – menées entre autres par Ivan Bolotnikov, 
+                        par les autres puissances européennes depuis le XVI° siècle – menées entre autres par Ivan Bolotnikov, 
                         Stenka Razin et Kondrati Boulavine – sont réprimés dans le sang et la terreur.
                     </p>
 
@@ -312,7 +311,7 @@
                     <p>
                         A la veille de la guerre de Sept Ans, le parti francophile gagne en influence et en importance au sein de la 
                         cour de Saint-Pétersbourg pour toutes sortes de raisons politiques et militaires mais aussi par l’attirance 
-                        de l’impératrice-tsar Elisabeth pour la France. Le chef de ce parti, Bestoujev, propose l’envoi de 30 000 hommes 
+                        de l’impératrice-tsar Elisabeth pour la France. Le chef de ce parti, Bestoujev, propose l’envoi de trente mille hommes 
                         en Saxe afin d’attiser l’attitude belliqueuse de Frédéric II. Pendant la guerre de Sept Ans Russes s’appuieront 
                         sur des unités cosaques contre les prussiens.
                     </p>
@@ -334,7 +333,7 @@
                     </p>
 
                     <p>
-                        En effet, la Suède n’a pas fait le choix de rester neutre comme son voisin danois. Depuis la fin de la Guerre du 
+                        En effet, la Suède n’a pas fait le choix de rester neutre comme son voisin danois. Depuis la fin de la Grande Guerre du 
                         Nord, le pays vit dans une période constitutionnaliste, où le Riksdag – le parlement suédois – exerce l’essentiel 
                         des pouvoirs politiques. S’y affronte le parti des Chapeaux, défenseurs de la Constitution et d’une alliance avec 
                         la France, avec le parti des Bonnets, défenseurs d’un renforcement des prérogatives royales et d’une alliance avec 
@@ -346,7 +345,7 @@
                         Suède avec le concours des Bonnets, de l’Angleterre et de la Prusse. Le complot est déjoué par les Chapeaux, 
                         jetant le discrédit sur ces deux royaumes et renforçant les intérêts français. En septembre 1757, le ministre des 
                         Affaires Etrangères Anders Johan von Höpken signe une convention défensive avec la France et l’Autriche, et décide 
-                        d’envoyer 20000 hommes en Poméranie au frais de ces deux pays, tels des mercenaires. Höpken voit dans cette guerre 
+                        d’envoyer vingt mille hommes en Poméranie au frais de ces deux pays, tels des mercenaires. Höpken voit dans cette guerre 
                         l’espoir d’étendre l’influence suédoise sur ces terres et ces ports prospères d’Allemagne du nord.
                     </p>
 
@@ -365,7 +364,7 @@
                         grand pan de l’Europe Centrale comprenant l’Autriche, la Hongrie, la Bohême et Moravie (actuelle Tchéquie), 
                         la Slovaquie, es Pays-Bas autrichiens (actuelle Belgique), la Dalmatie (actuelle Croatie), le duché de Milan 
                         ainsi que quelques Etats princiers dans le sud du Saint-Empire. La monarchie de Habsbourg reste donc tentaculaire 
-                        en ce début du XVIII° siècle et rivalise en population avec le royaume de France, avec près de 20 millions 
+                        en ce début du XVIII° siècle et rivalise en population avec le royaume de France, avec près de vingt millions 
                         d’habitants. De plus, l’empereur du Saint-Empire – lorsqu’il n’est pas issu de la maison de Habsbourg – est 
                         maintenu sous une très forte emprise autrichienne car la maison impériale peut faire pression auprès des 
                         princes électeurs allemands pour leurs votes à la Diète de Ratisbonne.
@@ -421,7 +420,7 @@
                         territoire : des juifs, des orthodoxes, des protestants ainsi que des musulmans s’y installent durablement 
                         et forment des minorités reconnues par le pouvoir central. De même, la plupart des documents administratifs 
                         sont traduits en plusieurs langues parmi lesquels le latin, le français, l’hébreu et l’allemand. Enfin, 
-                        certaines villes comme Cracovie ont été et restent des pôles majeurs de la Renaissance en Europe
+                        certaines villes comme Cracovie ont été et restent des pôles majeurs de la Renaissance en Europe.
                     </p>
 
                     <p>
@@ -455,7 +454,7 @@
                         face à l’Autriche. Frédéric-Guillaume entreprend de construire une véritable Etat militaire durant ses années 
                         de règne. C’est son fils Frédéric II qui montera sur le trône en 1740, à la veille de la guerre de Succession 
                         d’Autriche. L’armée prussienne réussit à conquérir la Silésie dès le début de la guerre. L’Autriche cherchera 
-                        tout du long de la guerre de Sept Ans à reprendre ces terres très peuplées et fertiles
+                        tout du long de la guerre de Sept Ans à reprendre ces terres très peuplées et fertiles.
                     </p>
 
                     <p>
