--- a/fr/amerique_nord.html
+++ b/fr/amerique_nord.html
@@ -30,9 +30,9 @@ git push
               <li><a href="credits.html">Crédits</a></li>
               <li><a>Langue</a>
                 <ul class="depliant_langage">
-                    <li><a href="../en/north_america.html">English</a></li>
-                    <!--<li><a href="../de/amerique.html">Deustche</a></li>-->
-                    <li><a href="../es/america_norte.html">Español</a></li>
+                    <li><a href="../en/europe.html">English</a></li>
+                    <li><a href="../de/europa.html">Deustche</a></li>
+                    <li><a href="../es/europa.html">Español</a></li>
                 </ul> 
               </li>
             </ul>
@@ -45,13 +45,13 @@ git push
             <img src="../image/menu.png"  class="image_menu"/> 
 
             <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
-                <li class="presentation"><span  class="fleche"><img src = "../image/arrow.png"/></span><a href="../accueil_projet_de_langue.html">   Présentation</a>
+                <li class="presentation"><a href="../accueil_projet_de_langue.html">   Présentation</a>
                     <ul class="niveau1">
                         <li><a href="../accueil_projet_de_langue.html/#introduction">Introduction</a></li>
                         <li><a href="../accueil_projet_de_langue.html/#carte">Mappemonde</a></li>
                     </ul>
                 </li>
-                <li  class="europe">  <span  class="fleche"><img src = "../image/arrow.png"/></span><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
+                <li  class="europe"><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
                     <ul class="niveau1">
                         <li><a href="europe/puissances.html">   Puissances européennes en 1750</a>
                             <!--<ul class="niveau2">
@@ -67,14 +67,6 @@ git push
                                 <li><a href="fr/europe/puissances.html/#pologne">République des Deux Nations</a></li>
                                 <li><a href="fr/europe/puissances.html/#hanovre">Electorat de Hanovre</a></li>
                                 <li><a href="fr/europe/puissances.html/#saxe">Electorat de Saxe</a></li>
-                            </ul>-->
-                        </li>
-                        <li class="diplomatie"><a href = "europe/diplomatie.html">   Relations diplomatiques</a>
-                            <!--<ul class="niveau2">
-                                <li><a href="fr/europe/diplomatie.html/#franco-anglaise">Rivalité franco-anglaise</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#prusso-autrichienne">Rivalité prusso-autrichienne</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#anglo-prussienne">Relations anglo-prussiennes</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#franco-autrichienne">Relations franco-autrichiennes</a></li>
                             </ul>-->
                         </li>
                         <li class="episodes"><a href = "europe/episodes.html">   Episodes de la guerre de Sept Ans</a> <!--On ne va pas faire un article pour chaque bataille, ce n'est pas l'objet du projet ...-->
@@ -128,37 +120,36 @@ git push
                         </li>
                     </ul>
                 </li>
-                <li  class="amerique"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="amerique_nord.html">   En Amérique du Nord</a>
+                <li  class="amerique"><a href="amerique_nord.html">   En Amérique du Nord</a>
                     <ul class="niveau1">
-                        <li><a href="amerique/contexte_amerique.html">Contexte</a></li>
                         <li><a href="amerique/acteurs_amerique.html">Les Amérindiens et les puissances colonisatrises</a></li>
                         <li><a href="amerique/conflit_amerique.html">Déroulé de la guerre en Amerique</a></li>
                     </ul>
                 </li>
-                <li class="inde"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="inde.html">   En Inde</a>
+                <li class="inde"><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
-                        <li><a href="inde.html#compagnies">Les compagnies coloniales européennes</a></li>
-                        <li><a href="inde.html#deroule">Déroulé de la guerre en Inde</a></li>
+                        <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
+                        <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
-                <li  class="ailleurs"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span>><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
+                <li  class="ailleurs"><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
-                        <li><a href="ailleurs.html#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                        <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
                                 <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                                 <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                             </ul>-->
-                        <li><a href="ailleurs.html#senegal">au Sénégal</a></li>
+                        <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
-                <li  class="issue"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href = "issue.html">   Issue</a>   
+                <li  class="issue"><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
-                        <li><a href = "issue.html#paris">Traité de Paris</a></li>
-                        <li><a href = "issue.html#hubertsbourg">Traité de Hubertsbourg</a></li>
-                        <li><a href = "issue.html#hambourg">Traité de Hambourg</a></li>
+                        <li><a href = "issue.html/#paris">Traité de Paris</a></li>
+                        <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
+                        <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
-                <li class="impacts"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
+                <li class="impacts"><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
                     <ul class="niveau1">
                         <li><a href="impacts/geopolitique.html">Bouleversements des équilibres géopolitiques</a></li>
                         <li><a href="impacts/culture.html">Dans la culture</li></li>
@@ -205,24 +196,27 @@ git push
                         assimilé sans prendre en compte ce biais fondamental dans les relations entre Européens et Amérindiens.
                     </p>
 
+                    <a href="amerique/acteurs_amerique.html">
                     
-                    <div class="blog">
+                        <div class="blog">
 
-                        <div>
-                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                            <div>
+                                <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                            </div>
+
+                            <div class="blog_texte">
+
+                                <h5>Les protagonistes de la guerre en Amérique</h5>
+
+                                <p>
+                                    blog acteurs
+                                </p>
+
+                            </div>
+
                         </div>
 
-                        <div class="blog_texte">
-
-                            <h5>Les protagonistes de la guerre en Amérique</h5>
-
-                            <p>
-                                blog acteurs
-                            </p>
-
-                        </div>
-
-                    </div>
+                    </a>
 
                     <hr/>
 
@@ -238,23 +232,26 @@ git push
                         semaines voire plusieurs mois.
                     </p>
 
-                    <div class="blog">
+                    <a href = "amerique/conflit_amerique.html">
 
-                        <div>
-                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        <div class="blog">
+
+                            <div>
+                                <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                            </div>
+
+                            <div class="blog_texte">
+
+                                <h5>Le déroulement de la guerre de la Conquête</h5>
+
+                                <p>
+                                    blog déroulement
+                                </p>
+
+                            </div>
+
                         </div>
-
-                        <div class="blog_texte">
-
-                            <h5>Le déroulement de la guerre de la Conquête</h5>
-
-                            <p>
-                                blog déroulement
-                            </p>
-
-                        </div>
-
-                    </div>
+                    </a>
 
                     <hr/>
 
@@ -265,6 +262,22 @@ git push
                     </p>
 
                     <img src="../image/america_map_fr.png" class="carte_amerique" width="100%"/>
+
+                    <p></p>
+
+                    <p></p>
+
+                    <div class="illustration">
+                        <img src="../image/ornement2.png" width ="200px"/>
+                    </div>
+
+                    <p></p>
+
+                    <p></p>
+            
+                    <div class = "retour" >
+                        <a href="../accueil_projet_de_langue.html">Retour à la page principale</a>
+                    </div>
 
                 </div>
 
