--- a/fr/credits.html
+++ b/fr/credits.html
@@ -27,9 +27,9 @@
               <li><a href="credits.html">Crédits</a></li>
               <li><a>Langue</a>
                 <ul class="depliant_langage">
-                    <li><a href="../en/home_page.html">English</a></li>
-                    <li><a href="../de/startseite.html">Deustche</a></li>
-                    <li><a href="../es/pagina_de_inicio.html">Español</a></li>
+                    <li><a href="../en/europe.html">English</a></li>
+                    <li><a href="../de/europa.html">Deustche</a></li>
+                    <li><a href="../es/europa.html">Español</a></li>
                 </ul> 
               </li>
             </ul>
@@ -42,13 +42,13 @@
             <img src="../image/menu.png"  class="image_menu"/> 
 
             <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
-                <li class="presentation"><span  class="fleche"><img src = "../image/arrow.png"/></span><a href="../accueil_projet_de_langue.html">   Présentation</a>
+                <li class="presentation"><a href="../accueil_projet_de_langue.html">   Présentation</a>
                     <ul class="niveau1">
                         <li><a href="../accueil_projet_de_langue.html/#introduction">Introduction</a></li>
                         <li><a href="../accueil_projet_de_langue.html/#carte">Mappemonde</a></li>
                     </ul>
                 </li>
-                <li  class="europe">  <span  class="fleche"><img src = "../image/arrow.png"/></span><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
+                <li  class="europe"><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
                     <ul class="niveau1">
                         <li><a href="europe/puissances.html">   Puissances européennes en 1750</a>
                             <!--<ul class="niveau2">
@@ -64,14 +64,6 @@
                                 <li><a href="fr/europe/puissances.html/#pologne">République des Deux Nations</a></li>
                                 <li><a href="fr/europe/puissances.html/#hanovre">Electorat de Hanovre</a></li>
                                 <li><a href="fr/europe/puissances.html/#saxe">Electorat de Saxe</a></li>
-                            </ul>-->
-                        </li>
-                        <li class="diplomatie"><a href = "europe/diplomatie.html">   Relations diplomatiques</a>
-                            <!--<ul class="niveau2">
-                                <li><a href="fr/europe/diplomatie.html/#franco-anglaise">Rivalité franco-anglaise</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#prusso-autrichienne">Rivalité prusso-autrichienne</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#anglo-prussienne">Relations anglo-prussiennes</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#franco-autrichienne">Relations franco-autrichiennes</a></li>
                             </ul>-->
                         </li>
                         <li class="episodes"><a href = "europe/episodes.html">   Episodes de la guerre de Sept Ans</a> <!--On ne va pas faire un article pour chaque bataille, ce n'est pas l'objet du projet ...-->
@@ -125,20 +117,19 @@
                         </li>
                     </ul>
                 </li>
-                <li  class="amerique"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="amerique_nord.html">   En Amérique du Nord</a>
+                <li  class="amerique"><a href="amerique_nord.html">   En Amérique du Nord</a>
                     <ul class="niveau1">
-                        <li><a href="amerique/contexte_amerique.html">Contexte</a></li>
                         <li><a href="amerique/acteurs_amerique.html">Les Amérindiens et les puissances colonisatrises</a></li>
                         <li><a href="amerique/conflit_amerique.html">Déroulé de la guerre en Amerique</a></li>
                     </ul>
                 </li>
-                <li class="inde"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="inde.html">   En Inde</a>
+                <li class="inde"><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
                         <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
                         <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
-                <li  class="ailleurs"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span>><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
+                <li  class="ailleurs"><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
                         <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
@@ -148,14 +139,14 @@
                         <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
-                <li  class="issue"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href = "issue.html">   Issue</a>   
+                <li  class="issue"><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
                         <li><a href = "issue.html/#paris">Traité de Paris</a></li>
                         <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
                         <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
-                <li class="impacts"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
+                <li class="impacts"><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
                     <ul class="niveau1">
                         <li><a href="impacts/geopolitique.html">Bouleversements des équilibres géopolitiques</a></li>
                         <li><a href="impacts/culture.html">Dans la culture</li></li>
@@ -200,9 +191,50 @@
                         <li><a href="https://commons.wikimedia.org/wiki/File:Bernardo_Bellotto,_il_Canaletto_-_Vista_di_Monaco_di_Baviera.jpg?uselang=fr">Bernardo Bellotto, <em>Vue de Munich</em>, 1761</a>, Domaine Public</li>
                         <li><a href="https://gallerix.org/storeroom/4062/N/6792/">Elias Martin, <em>Vue de Stockholm</em>, date inconnue</a>, Domaine Public</li>
                         <li><a href="https://commons.wikimedia.org/wiki/File:Lisboa_vista_do_Pal%C3%A1cio_do_Marqu%C3%AAs_de_Abrantes_(1.%C2%AA_metade_s%C3%A9c._XVIII)_-_Museu_de_Lisboa,_MC.PIN.0264.png?uselang=fr">Auteur inconnu, <em>Vue de Lisbonne depuis le palais du marquis d'Abrantès</em>, première moitié du XVIII° siècle</a>, Domaine Public</li>
-                        <!--<li><a></a></li>-->
-                        <!--<li><a></a></li>-->
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Prise_Port_Mahon_Minorque_20_mai_1756.jpg"> Jean-Baptiste Martin le jeune, <em>Prise du Port-Mahon sur l'île de Minorque, 1756</em>, 1756-1778</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Johann_Christoph_Frisch_-_Death_of_Field_Marshal_Schwerin.jpg">Johann Christoph Frisch, <em>La mort du feld-maréchal de Schwerin lors du siège de Prague</em>, XVIII° siècle</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Friedrich_II_in_der_Schlacht_bei_Zorndorf_Copy_after_Carl_R%C3%B6chling.jpg">Carl Röchling, <em>Frédéric II à la bataille de Zorndorf</em>, 1910</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Alexander_von_Kotzebue_-_Battle_of_Kunersdorf_on_1_August_1759.jpg">Alexander Kotzebue, <em>la Bataille de Kunersdorf</em>, 1848</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Canaletto_(I)_013.jpg">Bernardo Belletto, <em>les Ruines de l'Eglise de Dresde</em>, 1765</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Fall_of_Kolberg_in_1761.jpg">Alexander Kotzebue, <em>La capture de la forteresse Russe de Kolberg</em>, 1852</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:The_Battle_of_Quiberon_Bay,_20_November_1759_RMG_BHC0397.tiff">Richard Paton, <em>La bataille de la Baie de Quiberon</em>, 1759</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:CaptureOfAlcideAndLys.jpg">Auteur inconnu, <em>Capture du <em>Alcide</em> et du <em>Lys</em>, 8 juin 1755</em>, XVIII° siècle</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Benjamin_West_005.jpg">Benjamin West, <em>La mort du général Wolfe, 1759</em>, 1770</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Treaty_of_Penn_with_Indians_by_Benjamin_West.jpg">Benjamin West, <em>Traité de Penn avec les Indiens</em>, 1771</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Thomas_Cole_-_A_View_of_the_Two_Lakes_and_Mountain_House,_Catskill_Mountains,_Morning_(1844)_-_Google_Art_Project.jpg">Thomas Cole, <em>Maison dans les montagnes Catskill au matin</em>, 1844</a>, Domaine Public</li>
+                        <li><a href="https://commons.wikimedia.org/wiki/File:Scene-from-the-last-of-the-mohicans-cora-kneeling-at-the-feet-of-tanemund-1827.jpg">Thomas Cole, <em>Scène du <em>Dernier des Mohicans</em> : Cora agenouillée aux pieds de Tamenund</em>, 1827</a>, Domaine public</li>
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
+                        <!--<li><a href=""></a></li>-->
                     </ul>
+
+                    <p></p>
+
+                    <p></p>
+
+                    <div class="illustration">
+                        <img src="../image/ornement5.png" width ="200px"/>
+                    </div>
+
+                    <p></p>
+
+                    <p></p>
+            
+                    <div class = "retour" >
+                        <a href="../accueil_projet_de_langue.html">Retour à la page principale</a>
+                    </div>
 
             </div>
         
