--- a/fr/inde.html
+++ b/fr/inde.html
@@ -30,9 +30,9 @@ git push
               <li><a href="credits.html">Crédits</a></li>
               <li><a>Langue</a>
                 <ul class="depliant_langage">
-                    <li><a href="../en/india.html">English</a></li>
-                    <!--<li><a href="../de/india.html">Deustche</a></li>
-                    <li><a href="../es/india.html">Español</a></li>-->
+                    <li><a href="../en/europe.html">English</a></li>
+                    <li><a href="../de/europa.html">Deustche</a></li>
+                    <li><a href="../es/europa.html">Español</a></li>
                 </ul> 
               </li>
             </ul>
@@ -45,13 +45,13 @@ git push
             <img src="../image/menu.png"  class="image_menu"/> 
 
             <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
-                <li class="presentation"><span  class="fleche"><img src = "../image/arrow.png"/></span><a href="../accueil_projet_de_langue.html">   Présentation</a>
+                <li class="presentation"><a href="../accueil_projet_de_langue.html">   Présentation</a>
                     <ul class="niveau1">
                         <li><a href="../accueil_projet_de_langue.html/#introduction">Introduction</a></li>
                         <li><a href="../accueil_projet_de_langue.html/#carte">Mappemonde</a></li>
                     </ul>
                 </li>
-                <li  class="europe">  <span  class="fleche"><img src = "../image/arrow.png"/></span><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
+                <li  class="europe"><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
                     <ul class="niveau1">
                         <li><a href="europe/puissances.html">   Puissances européennes en 1750</a>
                             <!--<ul class="niveau2">
@@ -67,14 +67,6 @@ git push
                                 <li><a href="fr/europe/puissances.html/#pologne">République des Deux Nations</a></li>
                                 <li><a href="fr/europe/puissances.html/#hanovre">Electorat de Hanovre</a></li>
                                 <li><a href="fr/europe/puissances.html/#saxe">Electorat de Saxe</a></li>
-                            </ul>-->
-                        </li>
-                        <li class="diplomatie"><a href = "europe/diplomatie.html">   Relations diplomatiques</a>
-                            <!--<ul class="niveau2">
-                                <li><a href="fr/europe/diplomatie.html/#franco-anglaise">Rivalité franco-anglaise</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#prusso-autrichienne">Rivalité prusso-autrichienne</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#anglo-prussienne">Relations anglo-prussiennes</a></li>
-                                <li><a href="fr/europe/diplomatie.html/#franco-autrichienne">Relations franco-autrichiennes</a></li>
                             </ul>-->
                         </li>
                         <li class="episodes"><a href = "europe/episodes.html">   Episodes de la guerre de Sept Ans</a> <!--On ne va pas faire un article pour chaque bataille, ce n'est pas l'objet du projet ...-->
@@ -128,20 +120,19 @@ git push
                         </li>
                     </ul>
                 </li>
-                <li  class="amerique"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="amerique_nord.html">   En Amérique du Nord</a>
+                <li  class="amerique"><a href="amerique_nord.html">   En Amérique du Nord</a>
                     <ul class="niveau1">
-                        <li><a href="amerique/contexte_amerique.html">Contexte</a></li>
                         <li><a href="amerique/acteurs_amerique.html">Les Amérindiens et les puissances colonisatrises</a></li>
                         <li><a href="amerique/conflit_amerique.html">Déroulé de la guerre en Amerique</a></li>
                     </ul>
                 </li>
-                <li class="inde"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href="inde.html">   En Inde</a>
+                <li class="inde"><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
                         <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
                         <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
-                <li  class="ailleurs"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span>><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
+                <li  class="ailleurs"><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
                         <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
@@ -151,14 +142,14 @@ git push
                         <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
-                <li  class="issue"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href = "issue.html">   Issue</a>   
+                <li  class="issue"><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
                         <li><a href = "issue.html/#paris">Traité de Paris</a></li>
                         <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
                         <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
-                <li class="impacts"><span  class="fleche" onclick="Affichern1()"><img src = "../image/arrow.png"/></span><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
+                <li class="impacts"><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
                     <ul class="niveau1">
                         <li><a href="impacts/geopolitique.html">Bouleversements des équilibres géopolitiques</a></li>
                         <li><a href="impacts/culture.html">Dans la culture</li></li>
@@ -177,9 +168,196 @@ git push
 
             <div class="cadre">
 
-                <h3 id="introduction">Les Guerres Carnatiques</h3>
+                <h3 id="introduction">le Contexte Géopolitique en Inde</h3>
 
                 <div class="introduction">
+
+                    <p>
+                        Le contexte géopolitique en Inde au début du XVIII° siècle est complexe à cerner et nécessiterait plus qu’une 
+                        simple page pour le rendre compte de façon exhaustif. Pour décrire rapidement, à cette époque dans le nord du 
+                        quasi-continent, une dynastie musulmane venue d’Afghanistan administre l’empire Moghol. Cette entité est en 
+                        pleine déliquescence depuis la mort de l’empereur Aurangzeb en 1704. La taille et la puissance de l’empire Moghol 
+                        tout du long du XVI° siècle n’avait pas d’équivalents dans le monde. Mais la domination musulmane dans un région 
+                        à majorité sikh et hindoue provoque des révoltes qui rendent la situation au sein de l’empire très instable. 
+                        Ainsi, des conflits entre les soubabs et leurs propres administrateurs, les nababs, éclatent et mettent à mal 
+                        l’appareil d’Etat tout le long du début du XVIII° siècle. 
+                    </p>
+
+                    <p>
+                        Le déclin de l'empire Moghol attise les convoitises. La montée en puissance des Marathes hindous dans le Deccan, dans le sud-ouest de l’Inde, et 
+                        dans les plaines du nord se fait en parallèle de l’avancée des troupes afghanes d’un autre Etat, l’empire Durrani, 
+                        au Pakistan et dans le Pendjab. Un article des évènements qui ont eu lieu en même temps que le Guerre de Sept Ans 
+                        relate plus en détail la confrontation entre les Afghans et les Marathes dans les environs de Delhi.
+                    </p>
+
+                </div>
+
+                <a href = "contemporain.html">
+
+                    <div class="blog">
+
+                        <div>
+                            <img src="../image/Alliances_in_Europe_1740.png" width="100%">
+                        </div>
+
+                        <div class="blog_texte">
+
+                            <h5>la bataille de Panipat</h5>
+
+                            <p>
+                                blog guerre entre marathes et empire afghan
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                </a>
+
+                <hr/>
+
+                <h3 id="introduction">les Guerres Carnatiques</h3>
+
+                <div class="introduction">
+
+                    <p>
+                        Dirigeons-nous maintenant dans le sud de l’Inde, dans la région du Carnatic. C’est ici que se trouve les sièges 
+                        des administrations françaises, anglaises et la plupart des comptoirs commerciaux européens. Le gouverneur français 
+                        de Pondichéry, un des plus gros comptoirs commerciaux français, répondant au nom de Pierre-Benoît Dumas, pose un 
+                        premier pied dans l’intrigue politique indienne en devenant prince vassal – nabab – de l’empereur moghol Muhammad 
+                        Shah en 1736. 
+                    </p>
+
+                    <p>
+                        Une première guerre éclate entre les compagnies anglaises et françaises en parallèle de la guerre de Succession 
+                        d’Autriche, en 1746. A cette date, les Français commandés par le successeur de Dumas, Joseph-François Dupleix, 
+                        prennent l’un des principaux comptoirs commerciaux anglais : le port de Madras, qui servira de monnaie d’échange 
+                        à la fin de la guerre. L’historiographie moderne considérera dans un second temps ces évènements comme étant le 
+                        cadre de la première guerre Carnatique.
+                    </p>
+
+                    <p>
+                        En 1749, les France et ses intermédiaires dans la compagnie des Indes décident de considérablement renforcer ses 
+                        positions dans le sous-continent indien. Elle soutient Chanda Sahib contre l’emprise moghole dans le Carnatic 
+                        lors de la seconde guerre carnatique, ce qui constitue une volte-face par rapport aux positions de Dumas. Ainsi 
+                        près d’Ambur, le 3 août de cette même année, ils mènent conjointement une action militaire menant à la mort du 
+                        nabab de la région.
+                    </p>
+
+                    <p>
+                        L’influence française dans le Carnatic est remarquable au regard des forces présentes : seulement deux mille cinq 
+                        cents soldats stationnent dans les comptoirs commerciaux, ainsi qu’autant de Cipayes, des soldats indiens servant dans 
+                        l’armée française. Pour les remercier de leur aide, Muzaffar, un soubab de Chanda Sahib, offre des terres aux français 
+                        dans les environs de Pondichéry, comprenant la ville de Masulipatam et l’île de Divy. Dupleix place ainsi ses pions 
+                        dans la région.
+                    </p>
+
+                </div>
+
+                <hr/>
+
+                <h3 id="introduction">les Compagnies Maritimes Européennes</h3>
+
+                <div class="introduction">
+
+                    <p>
+                        La particularité des guerres Carnatiques en Inde est qu’il s’agit avant tout de guerres par procuration. Le conflit 
+                        concerne bien deux compagnies commerciales avant d’être un conflit entre Etats. Ces compagnies, dont l’organisation 
+                        s’apparente pourtant plus à un Etat, n’ont pas pour vocation la conquête de territoires, mais cherchent plutôt à assurer 
+                        une forte pénétration commerciale en Inde. Néanmoins, il est tentant pour les compagnies anglaise et française de 
+                        considérer une politique d’acquisition territoriale en Inde, afin de s’appuyer sur des relations commerciales plus 
+                        solides, ou plutôt plus inégales suivant le point de vue historiographique.
+                    </p>
+
+                    <p>
+                        A l’opposé, les compagnies maritimes portugaise et néerlandaise se contentent de simples relations commerciales dans 
+                        le quasi-continent, même si ces derniers ont tout de même une administration coloniale à Ceylan, l’actuel Sri Lanka. 
+                        Par ailleurs, notons qu’une bonne partie de la fortune de Voltaire, le sage de la Brède, est placée dans des actions 
+                        de la compagnie française des Indes Orientales. Ce dernier écrira abondamment à propos de la guerre en Inde, car elle 
+                        le concerne directement.
+                    </p>
+
+                </div>
+
+                <hr/>
+
+                <h3 id="introduction">le déroulement de la guerre</h3>
+
+                <div class="introduction">
+
+                    <p>
+                        Pour Edmond Dziembowski, « Le facteur espace-temps, qui offre déjà en Amérique une latitude d’action très importantes 
+                        aux responsables militaires, se montre encore plus déterminant en Inde ». En effet Il faut cinq à six mois pour rallier 
+                        les ports Indiens de l’Est depuis les ports atlantique français et britanniques. De plus, les départs ne se font depuis 
+                        l’Europe qu’en hiver et au tout début du printemps et les retours – encore plus longs car durant huit mois – 
+                        s’échelonnent de décembre à avril.
+                    </p>
+
+                    <p>
+                        Les réactions anglaise suite aux gains d’influence des Français ne tarderont pas. Ils nomment un nouveau gouverneur pour 
+                        la compagnie maritime, Thomas Saunders. Ce dernier soutient l’ennemi des alliés de Dupleix : Muhammad Ali Khan, un 
+                        prétendant au trône du Carnatic. Arcate, la capitale du Carnatic, est prise par les Anglais dès novembre 1751 et en 
+                        juin 1752, les forces françaises capitule à Srirangam. Chanda Sahib est alors exécuté. Malgré ces défaites, en décembre 
+                        1751, Dupleix inflige une lourde défaite au marathe Balaji Rao dans le Deccan. Cette stratégie va-t-en-guerre est vue 
+                        d’un très mauvais œil par la compagnie française des Indes Orientales et de ces actionnaires, car cela affecte ces 
+                        positions commerciales dans le sous-continent.  
+                    </p>
+
+                    <p>
+                        Un premier traité est signé par Godeheu, le successeur de Dupleix au poste de gouverneur de Pondichéry, en 1754. 
+                        Ce texte déclare l’arrêt provisoire des ingérences françaises dans les états princiers de l’Inde. Beaucoup de princes 
+                        alliés protestent et voient cet acte comme une trahison de la part des Français, affaiblissant l’influence française 
+                        dans le sud de l’Inde
+                    </p>
+
+                    <p>
+                        Les évènements contemporains à la guerre de Sept Ans ont principalement lieu en 1756, au Bengale, plus au nord. La compagnie 
+                        anglaise des Indes Orientales apparaît en difficulté face au caractère imprévisible de Siraj ud-Dula, l’homme fort de la région. 
+                        Dans des conflits de pouvoirs, il s’empare et pille la place forte des Britanniques au Bengale à Calcutta : le Fort William. 
+                        Près de soixante mille hommes et cinq cents éléphants prennent part aux combats. 
+                    </p>
+
+                    <p>
+                        Du côté français, Renaud de Saint-Germain est nommé gouverneur de Chandernagor, tout près de Calcutta. Les britanniques 
+                        craignent alors un accord entre ces deux protagonistes. Le 17 mars 1757, ils arrivent devant le comptoir français par 
+                        voie fluviale, échangent avec les français des canonnades pendant deux heures avant que ces derniers hissent le drapeau 
+                        blanc. Chandernagor était le comptoir le plus prospère pour la compagnie française, les pertes économiques sont donc 
+                        très lourdes. 
+                    </p>
+
+                    <p>
+                        Gravitant dans l’entourage de ud-Dula, la famille des Jagat Seth est la plus puissante du Bengale. Ce sont les financiers des 
+                        empereurs Moghols, et leur influence n’a d’égal que leur richesse, comparable à celle des Rothschild en Europe au XIX° siècle. 
+                        Surnommés les « Banquiers du monde », ils constituaient un appui financier précieux pour les nababs du Bengale. Ud-Dula perd 
+                        leur soutien au tout début de la guerre. Les anglais n’y sont pas pour rien dans cette rupture, ils jouent habilement des intrigues 
+                        des cours princières indiennes dès leur toute première présence dans le quasi-continent. L’accord conclu entre cette famille et 
+                        les anglais pour éjecter ud-Dula du pouvoir aboutit à la bataille de Plassey qui consacre la domination anglaise en Inde, et le 
+                        couronnement de Mir Jafar, qui concède de larges territoires à la East India Company. Cette présence est plus influente que jamais, 
+                        et cette bataille sera considéré plus tard comme l’acte fondateur du Raj britannique.
+                    </p>
+
+                    <p>
+                        Conformément a ce qui a pu être dit plus haut, il faudra un an pour que la nouvelle de la victoire de Plassey atteigne l’Europe. 
+                        La famille de Pitt est très attentive aux affaires indiennes : celle-ci est très présente dans l’administration de la compagnie 
+                        anglaise des Indes Orientales. En effet, Thomas Pitt, le grand-père de William Pitt, était gouverneur du Madras au début du XVIII° 
+                        siècle.
+                    </p>
+
+                    <p></p>
+
+                    <p></p>
+        
+                    <div class="illustration">
+                        <img src="../image/ornement8.png" width ="200px"/>
+                    </div>
+
+                    <p></p>
+
+                    <p></p>
+                    
+                    <div class = "retour" >
+                        <a href="../accueil_projet_de_langue.html">Retour à la page principale</a>
+                    </div>
 
                 </div>
 
